# infobus-data

./: .dockerignore  .env  .env.dev  .env.example  .env.local  .env.local.example  .env.prod  .gitignore  DEVELOPMENT.md  DOCKER.md  Dockerfile  ENV.md  PRODUCTION.md  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  kpi_dictionary_en.md  kpi_dictionary_es.md  manage.py  nginx.conf  pyproject.toml
dashboard/: tasks.py
infobus_data/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
scripts/: check-secrets.sh  dev.sh  prod.sh
website/: urls.py  views.py
website/templates/: index.html
